# openenclave

.jenkins/: Jenkinsfile
enclave/core/: pthread.c
samples/data-sealing/: CMakeLists.txt
samples/data-sealing/host/: CMakeLists.txt
